Revision history for {{$dist->name}}

{{$NEXT}}
- Allow arrays within params

1.190220  2019-01-22 11:35:52+00:00 Europe/London
- Add in $rest->opsview_version call
- Improve exception object for showing error details
- Add in build and install instructions to README

1.181000  2018-04-10 14:44:47+01:00 Europe/London

1.180580  2018-02-27 15:38:30+00:00 Europe/London