@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 - Allow arrays within params
+- Fixe tests for use with Opsview Monitor v6.x
 
 1.190220  2019-01-22 11:35:52+00:00 Europe/London
 - Add in $rest->opsview_version call
